Included generated code into main app
